--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,14 +42,18 @@
 
     <Button
         android:id="@+id/next_level_button"
+        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
         android:layout_marginBottom="16dp"
-        android:background="#093889"
-        android:fontFamily="@font/aclonica"
-        android:insetBottom="9dp"
-        android:text="Adicionar Produtos" />
+        android:fontFamily="casual"
+        android:radius="10dp"
+        android:text="Adicionar Produtos"
+        android:textColor="#FFFFFF"
+        android:textStyle="bold"
+        android:background="@drawable/rounded_button"
+        android:textSize="24sp"/>
 
 </RelativeLayout>
