--- a/app/src/main/res/layout/activity_lista_produtos_activity.xml
+++ b/app/src/main/res/layout/activity_lista_produtos_activity.xml
@@ -6,15 +6,36 @@
     android:layout_height="match_parent">
 
 
+    <TextView
+        android:id="@+id/app_title"
+        android:layout_width="414dp"
+        android:layout_height="732dp"
+        android:layout_gravity="center_horizontal"
+        android:alpha="0.7"
+        android:background="#04B2FF"
+        android:elegantTextHeight="true"
+        android:fontFamily="casual"
+        android:freezesText="false"
+        android:gravity="center_horizontal"
+        android:text="Lista de compras cadatradas"
+        android:textAlignment="center"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#FFFFFF"
+        android:textSize="34sp"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="-1dp" />
+
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/activity_lista_produtos_recyclerView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="415dp"
+        android:layout_height="727dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
         tools:listitem="@layout/produto_item" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
