--- a/app/src/main/res/layout/produto_item.xml
+++ b/app/src/main/res/layout/produto_item.xml
@@ -3,25 +3,90 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
+
+    <TextView
+        android:id="@+id/produto_descricao"
+        android:layout_width="0dp"
+        android:layout_height="19dp"
+        android:layout_margin="16dp"
+        android:fontFamily="casual"
+        android:lineSpacingExtra="8sp"
+        android:orientation="vertical"
+        android:rotationX="0"
+        android:textAllCaps="false"
+        android:textColor="#1B0D0D"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="190dp"
+        tools:text="Descrição:" />
+
+    <TextView
+        android:id="@+id/produto_valor"
+        android:layout_width="0dp"
+        android:layout_height="19dp"
+        android:layout_margin="16dp"
+        android:fontFamily="casual"
+        android:lineSpacingExtra="8sp"
+        android:orientation="vertical"
+        android:rotationX="0"
+        android:textAllCaps="false"
+        android:textColor="#1B0D0D"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="247dp"
+        tools:text="Valor:" />
+
+    <TextView
+        android:id="@+id/produto_label"
+        android:layout_width="0dp"
+        android:layout_height="19dp"
+        android:layout_margin="16dp"
+        android:fontFamily="casual"
+        android:lineSpacingExtra="8sp"
+        android:orientation="vertical"
+        android:rotationX="0"
+        android:textAllCaps="false"
+        android:textColor="#1B0D0D"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="132dp"
+        tools:text="Produto:" />
 
     <TextView
         android:id="@+id/produto_item_nome"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="19dp"
         android:layout_margin="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.781"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="159dp"
         tools:text="Salada de frutas" />
+
 
     <TextView
         android:id="@+id/produto_item_descricao"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/produto_item_nome"
         tools:text="Laranja, manga e uva" />
@@ -31,11 +96,12 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/produto_item_descricao"
         tools:text="19.99" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
