--- a/app/src/main/res/layout/produto_item.xml
+++ b/app/src/main/res/layout/produto_item.xml
@@ -6,102 +6,108 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/produto_descricao"
-        android:layout_width="0dp"
-        android:layout_height="19dp"
-        android:layout_margin="16dp"
-        android:fontFamily="casual"
-        android:lineSpacingExtra="8sp"
-        android:orientation="vertical"
-        android:rotationX="0"
-        android:textAllCaps="false"
-        android:textColor="#1B0D0D"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="190dp"
-        tools:text="Descrição:" />
-
-    <TextView
-        android:id="@+id/produto_valor"
-        android:layout_width="0dp"
-        android:layout_height="19dp"
-        android:layout_margin="16dp"
-        android:fontFamily="casual"
-        android:lineSpacingExtra="8sp"
-        android:orientation="vertical"
-        android:rotationX="0"
-        android:textAllCaps="false"
-        android:textColor="#1B0D0D"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="247dp"
-        tools:text="Valor:" />
-
-    <TextView
         android:id="@+id/produto_label"
-        android:layout_width="0dp"
+        android:layout_width="328dp"
         android:layout_height="19dp"
-        android:layout_margin="16dp"
         android:fontFamily="casual"
         android:lineSpacingExtra="8sp"
         android:orientation="vertical"
         android:rotationX="0"
+        android:text="Nome:"
         android:textAllCaps="false"
         android:textColor="#1B0D0D"
         android:textSize="16sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.554"
         app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="132dp"
-        tools:text="Produto:" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.065"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/produto_item_nome"
-        android:layout_width="0dp"
-        android:layout_height="19dp"
-        android:layout_margin="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="16dp"
+        android:layout_width="328dp"
+        android:layout_height="32dp"
+        android:labelFor="@id/produto_label"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.781"
+        app:layout_constraintHorizontal_bias="0.554"
         app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="159dp"
-        tools:text="Salada de frutas" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.173"
+        tools:text="Salada de frutas"
+        android:textSize="16sp"/>
 
+    <TextView
+        android:id="@+id/produto_descricao"
+        android:layout_width="328dp"
+        android:layout_height="19dp"
+        android:fontFamily="casual"
+        android:lineSpacingExtra="8sp"
+        android:orientation="vertical"
+        android:rotationX="0"
+        android:text="Descrição:"
+        android:textAllCaps="false"
+        android:textColor="#1B0D0D"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.554"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.303"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/produto_item_descricao"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="16dp"
+        android:layout_width="325dp"
+        android:layout_height="35dp"
+        android:labelFor="@id/produto_descricao"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.546"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/produto_item_nome"
-        tools:text="Laranja, manga e uva" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.439"
+        tools:text="Laranja, manga e uva"
+        android:textSize="16sp"/>
+
+    <TextView
+        android:id="@+id/produto_valor"
+        android:layout_width="328dp"
+        android:layout_height="19dp"
+        android:fontFamily="casual"
+        android:lineSpacingExtra="8sp"
+        android:orientation="vertical"
+        android:rotationX="0"
+        android:text="Valor:"
+        android:textAllCaps="false"
+        android:textColor="#1B0D0D"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.554"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.57"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/produto_item_valor"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="16dp"
+        android:layout_width="329dp"
+        android:layout_height="36dp"
+        android:labelFor="@id/produto_valor"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.56"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/produto_item_descricao"
-        tools:text="19.99" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.708"
+        tools:text="19.99"
+        android:textSize="16sp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
